Closed Bug 650835 Opened 13 years ago Closed 13 years ago

GC Advice: Passing in NaN as imminence parameter does not result in argumenterror

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect, P3)

defect

Tracking

(Not tracked)

RESOLVED FIXED
Q3 11 - Serrano

People

(Reporter: cpeyer, Assigned: rulohani)

References

Details

Attachments

(2 files)

Passing in NaN should cause pauseForGCIfCollectionImminent to set the imminence to the default 0.75 value.
Flags: in-testsuite-
Flags: flashplayer-triage+
Flags: flashplayer-qrb+
Flags: flashplayer-bug-
See Also: → 631515
Flags: flashplayer-qrb+ → flashplayer-qrb?
Attached patch PatchSplinter Review
Changes for argument check.
Assignee: nobody → rlohani
Status: NEW → ASSIGNED
Summary: GC Advice: Passing in NaN as imminence parameter does not set imminence to default → GC Advice: Passing in NaN as imminence parameter does not result in argumenterror
Flags: flashplayer-qrb?
Flags: flashplayer-qrb+
Flags: flashplayer-injection-
Priority: -- → P3
Target Milestone: --- → Q3 11 - Serrano
Attached patch Updated testSplinter Review
Add error test cases.  Also added a few valid edge cases.

Note that there is also whitespace changes as I changed the spacing to standard 4 space indent.
Attachment #526866 - Flags: review?(rlohani)
Attachment #526866 - Flags: review?(rlohani) → review+
Assignee: rlohani → rulohani
changeset: 6189:a52c14b34534
user:      Chris Peyer <cpeyer@adobe.com>
summary:   Bug 650835: GC Advice test (and minor patch from Ruchi for error handling) (r=rulohani)

http://hg.mozilla.org/tamarin-redux/rev/a52c14b34534
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
changeset: 6192:597f49d039de
user:      Chris Peyer <cpeyer@adobe.com>
summary:   Bug 650835 addendum: increase the inner loop in order for test to work reliably in the player (r=cpeyer)

http://hg.mozilla.org/tamarin-redux/rev/597f49d039de
changeset: 6194:a79b7d4f4e4b
user:      Chris Peyer <cpeyer@adobe.com>
summary:   Bug 650835 addendum: reduce inner loop so that test doesn't cause android to fail (r=cpeyer)

http://hg.mozilla.org/tamarin-redux/rev/a79b7d4f4e4b
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: