Bug 650835: GC Advice test (and minor patch from Ruchi for error handling) (r=rulohani)